Bug 324172 - The currency editor dialog does not handle edit triggers correctly
Summary: The currency editor dialog does not handle edit triggers correctly
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-28 14:52 UTC by Cristian Oneț
Modified: 2013-08-29 12:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2013-08-28 14:52:11 UTC
Because editing is not handled trough the correct QTreeWidget interface editing for example using 'F2' although it appears as working does not actually save the data.

Right now persistent id editing is triggered only by the itemActivated signal which is wrong because it misses the other edit triggers like 'F2', double click (when double click to activate the item is set in the system).

Reproducible: Always

Steps to Reproduce:
1. Open the currency edit dialog
2. Press 'F2' on the symbol column
3. Changed the value then press 'Enter'
Actual Results:  
The result is not applied.

Expected Results:  
The result should be saved.
Comment 1 Cristian Oneț 2013-08-29 11:58:25 UTC
Git commit 040dad9c00e31dfbad058a8d0cad59078440cf4a by Cristian Oneț.
Committed on 29/08/2013 at 04:05.
Pushed by conet into branch 'master'.

The currency editor dialog now properly handles edit triggers.
The currency ID column is not editable as is should have been.
Moved the whole currency updating business logic to KMyMoneyApp
where we already had the currency creating, renaming and deleting
methods. Moved the initial loading of the currencies out of the
dialog constructor so that the initial currency selection will
enable the proper actions.
REVIEW: 112350

M  +37   -44   kmymoney/dialogs/kcurrencyeditdlg.cpp
M  +1    -4    kmymoney/dialogs/kcurrencyeditdlg.h
M  +6    -5    kmymoney/kmymoney.cpp
M  +1    -1    kmymoney/kmymoney.h

http://commits.kde.org/kmymoney/040dad9c00e31dfbad058a8d0cad59078440cf4a
Comment 2 Cristian Oneț 2013-08-29 12:01:27 UTC
Git commit 5147a0e828f3d82ce396a311d79caca466440293 by Cristian Oneț.
Committed on 29/08/2013 at 04:05.
Pushed by conet into branch '4.6'.

The currency editor dialog now properly handles edit triggers.
The currency ID column is not editable as is should have been.
Moved the whole currency updating business logic to KMyMoneyApp
where we already had the currency creating, renaming and deleting
methods. Moved the initial loading of the currencies out of the
dialog constructor so that the initial currency selection will
enable the proper actions.
REVIEW: 112350
(cherry picked from commit 040dad9c00e31dfbad058a8d0cad59078440cf4a)

M  +37   -44   kmymoney/dialogs/kcurrencyeditdlg.cpp
M  +1    -4    kmymoney/dialogs/kcurrencyeditdlg.h
M  +6    -5    kmymoney/kmymoney.cpp
M  +1    -1    kmymoney/kmymoney.h

http://commits.kde.org/kmymoney/5147a0e828f3d82ce396a311d79caca466440293