The currency editor dialog now properly handles edit triggers. The currency ID column is not editable as is should have been. Moved the whole currency updating business logic to KMyMoneyApp where we already had the currency creating, renaming and deleting methods. Moved the initial loading of the currencies out of the dialog constructor so that the initial currency selection will enable the proper actions.

BUG: 324172
REVIEW: 112350